app/assets/stylesheets/views/_brexit-landing-page.scss
$dark-blue: #182D4E;
$red: #E61E32;

.large-paragraph {
  @include govuk-font($size: 19);
  margin: govuk-spacing(6) 0 govuk-spacing(1);

  @include govuk-media-query($from: tablet) {
    margin: 0;
  }
}

.landing-page__header {
  padding-bottom: govuk-spacing(9);
  padding-top: govuk-spacing(3);
  background-color: $dark-blue;
  color: govuk-colour("white");
}

// scss-lint:disable QualifyingElement
p.landing-page__header-text {
  @include govuk-font(24);
  color: govuk-colour("white");
}

hr.landing-page__divider {
  outline: 0;
  border: 1px solid govuk-colour("white");
}
// scss-lint:enable QualifyingElement

.landing-page__contents {
  margin: govuk-spacing(6) 0 govuk-spacing(9) 0;
}

.landing-page__share {
  @include govuk-responsive-margin(8, "top");
}

.full-page-width-wrapper--landing-page {
  border-top: 2px solid $red;
}

.landing-page__section {
  margin-bottom: govuk-spacing(8);
  border-top: 2px solid $red;
}

.landing-page__section-title {
  padding: govuk-spacing(3) govuk-spacing(2) govuk-spacing(3) 0;
}

.landing-page__section-list-wrapper {
  margin-bottom: govuk-spacing(6);
  border-top: 1px solid govuk-colour("mid-grey", $legacy: "grey-2");
  padding-top: govuk-spacing(4);
}

.landing-page__section-list {
  @include govuk-font(19);
  margin-bottom: govuk-spacing(3);
  margin-left: govuk-spacing(5);
}

.landing-page__section-see-all {
  @include govuk-font(19);
  margin-top: govuk-spacing(4);
}

.landing-page__section em {
  font-weight: bold;
  font-style: normal;
}

.landing-page__buckets {
  padding-top: govuk-spacing(6);
  margin-bottom: govuk-spacing(6);
}

.landing-page__email-wrapper {
  margin-top: govuk-spacing(7);
  padding: govuk-spacing(6);
  background-color: govuk-colour("light-grey", $legacy: "grey-4");
  border: 1px solid govuk-colour("med-grey", $legacy: "grey-2");
}

.landing-page__email-title {
  margin-bottom: govuk-spacing(2);
}

.landing-page__divide {
  border-top: 1px solid govuk-colour("white");
  padding-top: govuk-spacing(4);
}

